[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yomi-corpus"
version = "0.1.0"
description = "Scaffolding for a Japanese yomi corpus pipeline"
requires-python = ">=3.10"

[project.optional-dependencies]
llm = ["openai>=1.0.0", "tiktoken>=0.9.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
